force-app/main/default/objects/Account/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <inlineHelpText>下記サイトで法人番号を検索して入力
https://www.houjin-bangou.nta.go.jp/</inlineHelpText>
    <label>取引先コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>