force-app/main/default/objects/Account/fields/LongName__c.field-meta.xml
<CustomField>
    <fullName>LongName__c</fullName>
    <label>正式名称</label>
    <length>50</length>
    <type>Text</type>
</CustomField>